syntax = "proto2";
package copresence;
option optimize_for = LITE_RUNTIME;
enum IdentityType {
  IDENTITY_TYPE_UNKNOWN = 0;
  GAIA_USER = 1;
  CHROMECAST = 2;
  ANDROIDOS = 3;
  CHROME = 4;
  UNREGISTERED = 5;
}
enum PushService {
  PUSH_SERVICE_UNKNOWN = 0;
  GCM = 1;
  APNS = 2;
  PUSH_SERVICE_NONE = 3;
}
enum ErrorType {
  ERROR_TYPE_UNKNOWN = 0;
  TOKEN_EXPIRED = 1;
  MAC_ADDRESS_UNAVAILABLE = 2;
  MAC_ADDRESS_NEEDS_PERMISSION = 3;
}
enum TokenStatus {
  TOKEN_STATUS_UNKNOWN = 0;
  VALID = 1;
  INVALID = 2;
  TRANSITIVE = 3;
}
enum TokenMedium {
  TOKEN_MEDIUM_UNKNOWN = 0;
  AUDIO_ULTRASOUND_PASSBAND = 1;
  BLUETOOTH_CLASSIC_NAME = 2;
  BLE_ADVERTISING_PACKET = 3;
  WIFI_DIRECT_SSID = 4;
  LOCAL_DEVICE = 5;
  BLE_GATT_SERVICE = 6;
  WIFI_AP_SSID = 7;
  AUDIO_AUDIBLE_DTMF = 8;
}
enum AclType {
  UNKNOWN_ACL_TYPE = 0;
  NO_ACL_CHECK = 1;
  OWNER_ONLY = 2;
  NAMED_ACL = 4;
  MESSAGE_ACL = 5;
  REFERENCED_ACL = 6;
  OPTED_OUT_MESSAGE_ACL = 7;
}
enum TokenInstructionType {
  UNKNOWN_TOKEN_INSTRUCTION_TYPE = 0;
  TRANSMIT = 1;
  RECEIVE = 2;
}
enum PlatformType {
  UNKNOWN_PLATFORM_TYPE = 0;
  CHROMECAST_PLATFORM_TYPE = 5;
  ANDROID_PLATFORM_TYPE = 6;
  IOS_PLATFORM_TYPE = 7;
  CHROME_PLATFORM_TYPE = 8;
}
enum InstructionType {
  UNKNOWN_INSTRUCTION_TYPE = 0;
  TOKEN = 1;
  SCAN_WIFI = 2;
  SCAN_BLE = 3;
}
enum StatusCode {
  STATUS_CODE_UNKNOWN = -1;
  OK = 0;
  COPRESENCE_DISABLED = 201;
  LOCATION_HISTORY_DISABLED = 202;
  UNDERAGED = 203;
  DEVICE_RE_REGISTRATION_REQUIRED = 204;
  RATE_LIMITED = 301;
}
enum OptInState {
  UNKNOWN_OPT_IN_STATE = 0;
  OPTED_IN = 1;
  OPTED_OUT = 2;
}
enum AudioConfiguration {
  AUDIO_CONFIGURATION_UNKNOWN = 0;
  AUDIO_CONFIGURATION_AUDIBLE = 1;
}
enum BroadcastScanConfiguration {
  BROADCAST_SCAN_CONFIGURATION_UNKNOWN = 0;
  BROADCAST_AND_SCAN = 1;
  BROADCAST_ONLY = 2;
  SCAN_ONLY = 3;
}
